--- a/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
+++ b/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
@@ -98,27 +98,27 @@
         <div class="col-md-12">
           <mat-table [dataSource]="tableDataSource" matSort>
             <ng-container matColumnDef="fechaEmision">
-              <mat-header-cell *matHeaderCellDef>Fecha de Emisión</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>FECHA DE EMISIÓN</mat-header-cell>
               <mat-cell *matCellDef="let pedido" data-label="Fecha de emision">{{ pedido.fechaEmision | date: 'dd/MM/yyyy' }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="numeroPedido">
-              <mat-header-cell *matHeaderCellDef>Número de Orden</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>NÚMERO DE ORDEN</mat-header-cell>
               <mat-cell *matCellDef="let pedido" data-label="Pedido">{{ pedido.id }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="proveedor">
-              <mat-header-cell *matHeaderCellDef>Proveedor</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>PROVEEDOR</mat-header-cell>
               <mat-cell *matCellDef="let pedido" data-label="Proveedor">{{ pedido.proveedor.nombre }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="total">
-              <mat-header-cell *matHeaderCellDef>Total</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>TOTAL</mat-header-cell>
               <mat-cell *matCellDef="let pedido" data-label="Subtotal" >$ {{ pedido.total | number:'1.2-2':'es-AR'}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="estado">
-              <mat-header-cell *matHeaderCellDef>Estado</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>ESTADO</mat-header-cell>
               <mat-cell *matCellDef="let pedido" data-label="Estado" >{{ pedido.estadoPedido.nombre }}</mat-cell>
             </ng-container>
 
