--- a/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
+++ b/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
@@ -52,6 +52,24 @@
       <div class="row pt-4">
         <div class="col-md">
           <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Provincia</mat-label>
+            <input type="text" matInput [formControl]="provincia" />
+          </mat-form-field>
+        </div>
+        <div class="col-md">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Localidad</mat-label>
+            <input type="text" matInput [formControl]="ciudad" />
+          </mat-form-field>
+        </div>
+        <div class="col-md">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Código Postal</mat-label>
+            <input type="text" matInput [formControl]="codigoPostal" />
+          </mat-form-field>
+        </div>
+        <div class="col-md">
+          <mat-form-field appearance="outline" class="w-100">
             <mat-label>Calle</mat-label>
             <input type="text" matInput [formControl]="calle" />
           </mat-form-field>
@@ -60,24 +78,6 @@
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Número</mat-label>
             <input type="text" matInput [formControl]="numero" />
-          </mat-form-field>
-        </div>
-        <div class="col-md">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Ciudad</mat-label>
-            <input type="text" matInput [formControl]="ciudad" />
-          </mat-form-field>
-        </div>
-        <div class="col-md">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Provincia</mat-label>
-            <input type="text" matInput [formControl]="provincia" />
-          </mat-form-field>
-        </div>
-        <div class="col-md">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Código Postal</mat-label>
-            <input type="text" matInput [formControl]="codigoPostal" />
           </mat-form-field>
         </div>
       </div>
