--- a/src/app/modules/productos/consultar-productos/consultar-productos.component.html
+++ b/src/app/modules/productos/consultar-productos/consultar-productos.component.html
@@ -75,37 +75,37 @@
         <div class="col-md-12">
           <mat-table [dataSource]="tableDataSource" matSort>
             <ng-container matColumnDef="imgProducto">
-              <mat-header-cell *matHeaderCellDef>Imagen</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>IMAGEN</mat-header-cell>
               <mat-cell *matCellDef="let producto">
                 <img [src]="producto.imgProducto" class="img-thumbnail"/>
               </mat-cell>
             </ng-container>
             <ng-container matColumnDef="producto">
-              <mat-header-cell *matHeaderCellDef>Producto</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>PRODUCTO</mat-header-cell>
               <mat-cell *matCellDef="let producto">{{ producto.nombre }}</mat-cell>
             </ng-container>
             <ng-container matColumnDef="costoCompra">
-              <mat-header-cell *matHeaderCellDef >Costo de Compra</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef >COSTO COMPRA</mat-header-cell>
               <mat-cell *matCellDef="let producto">
                 $ {{ producto.costo | number:'1.2-2':'es-AR' }}
               </mat-cell>
             </ng-container>
             <ng-container matColumnDef="precioBase">
-              <mat-header-cell *matHeaderCellDef>Precio sin IVA</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>PRECIO SIN IVA</mat-header-cell>
               <mat-cell *matCellDef="let producto">
                 $ {{ producto.precioSinIVA | number:'1.2-2':'es-AR' }}
               </mat-cell>
             </ng-container>
             <ng-container matColumnDef="tipoProducto">
-              <mat-header-cell *matHeaderCellDef>Tipo Producto</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>TIPO PRODUCTO</mat-header-cell>
               <mat-cell *matCellDef="let producto">{{ producto.tipoProducto?.nombre }}</mat-cell>
             </ng-container>
             <ng-container matColumnDef="proveedor">
-              <mat-header-cell *matHeaderCellDef>Proveedor</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>PROVEEDOR</mat-header-cell>
               <mat-cell *matCellDef="let producto">{{ producto.proveedor?.nombre }}</mat-cell>
             </ng-container>
             <ng-container matColumnDef="marca">
-              <mat-header-cell *matHeaderCellDef>Marca</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>MARCA</mat-header-cell>
               <mat-cell *matCellDef="let producto">{{ producto.marca?.nombre }}</mat-cell>
             </ng-container>
             <ng-container matColumnDef="acciones">
