--- a/src/app/modules/clientes/consultar-clientes/consultar-clientes.component.html
+++ b/src/app/modules/clientes/consultar-clientes/consultar-clientes.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
         <p class="titulo">Clientes</p>
-        <button mat-stroked-button color="warn" class="btn round mb-3" >Registrar nuevo cliente</button>
+        <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevoCliente()">Registrar nuevo cliente</button>
       </div>
     </div>
 
