--- a/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
@@ -1,1 +1,85 @@
-<p>registrar-cuenta-corriente works!</p>
+<div class="container py-3 col-xl-11">
+  <br>
+  <div class="row">
+    <div class="col d-flex justify-content-between align-items-center">
+      <p class="titulo">{{esConsulta ? 'Consultar Cuenta Corriente' : 'Registrar Cuenta Corriente'}}</p>
+      <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar" (click)="habilitarEdicion()">
+        <mat-icon class="editar">edit</mat-icon>
+      </button>
+    </div>
+  </div>
+
+  <mat-divider></mat-divider>
+  <br>
+
+  <div class="row">
+    <!-- Columna de Inputs -->
+    <div class="col-md-8">
+      <form [formGroup]="form">
+        <!-- Primera línea: Nombre del producto y Código de Barras -->
+        <div class="row pt-4">
+          <div class="col-md-4">
+              <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Usuario</mat-label>
+                <mat-select formControlName="txUsuario">
+                  <mat-option *ngFor="let usuario of listaUsuarios" [value]="usuario.id">
+                    {{usuario.nombreUsuario}}
+                  </mat-option>
+                </mat-select>
+                <mat-error *ngIf="txUsuario.invalid">{{getErrorMessage(txUsuario)}}</mat-error>
+              </mat-form-field>
+          </div>
+          <div class="col-md-4">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Nombre</mat-label>
+              <input matInput [formControl]="txNombre" placeholder="Nombre" readonly>
+            </mat-form-field>
+          </div>
+
+          <div class="col-md-4">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Apellido</mat-label>
+              <input matInput [formControl]="txApellido" placeholder="Apellido" readonly>
+            </mat-form-field>
+          </div>
+
+          </div>
+        <!-- Segunda línea: Tipo Producto, Marca, Proveedor -->
+        <div class="row pt-4">
+          <div class="col-md-6">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Creada</mat-label>
+              <textarea matInput formControlName="txCreada" rows="3"></textarea>
+              <mat-error *ngIf="txCreada.invalid">{{getErrorMessage(txCreada)}}</mat-error>
+            </mat-form-field>
+          </div>
+          <div class="col-md-6">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Balance</mat-label>
+              <mat-select formControlName="txBalance">
+              </mat-select>
+              <mat-error *ngIf="txBalance.invalid">{{getErrorMessage(txBalance)}}</mat-error>
+            </mat-form-field>
+          </div>
+      </form>
+    </div>
+
+    <mat-divider></mat-divider>
+    <br>
+    <div class="row text-right">
+
+      <!-- Btn de cancelar, registrar y modificar -->
+      <div class="row text-right">
+        <div class="col d-flex justify-content-end">
+          <button mat-button color="accent" class="btn round" (click)="cancelar()" id="btnLimpiarFiltro">
+            {{ (!data.editar && esConsulta) ? 'Volver' : 'Cancelar' }}
+          </button>
+          <button *ngIf="!esConsulta" mat-raised-button color="accent" class="btn round" (click)="registrarProducto()" id="btnBuscar">Registrar</button>
+          <button *ngIf="data.editar" mat-raised-button color="accent" class="btn round" (click)="modificarProducto()" id="btnBuscar2">Modificar</button>
+        </div>
+      </div>
+
+    </div>
+    <br>
+  </div>
+</div>
