--- a/src/app/modules/clientes/consultar-cuentas-corrientes/consultar-cuentas-corrientes.component.html
+++ b/src/app/modules/clientes/consultar-cuentas-corrientes/consultar-cuentas-corrientes.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="d-flex justify-content-between align-items-center w-100">
         <p class="titulo">Cuentas Corrientes</p>
-         <button mat-stroked-button color="warn" class="btn round mb-3" >Registrar cuenta corriente</button>
+         <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevaCuenta()">Registrar cuenta corriente</button>
       </div>
     </div>
     <mat-divider></mat-divider>
@@ -68,6 +68,20 @@
               <mat-header-cell *matHeaderCellDef>Balance</mat-header-cell>
               <mat-cell *matCellDef="let cuentaCorriente">
                 {{ cuentaCorriente.balanceTotal | currency:'' : 'symbol':'1.2-2':'en' }}
+              </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="acciones">
+              <mat-header-cell *matHeaderCellDef>Acciones</mat-header-cell>
+              <mat-cell *matCellDef="let cuentaCorriente" data-label="Acciones">
+                <button class="btn" mat-icon-button matTooltip="Ver" (click)="verCuentaCorriente(cuentaCorriente, false)">
+                  <mat-icon class="ver">visibility</mat-icon>
+                </button>
+                <button class="btn" mat-icon-button matTooltip="Modificar" (click)="verCuentaCorriente(cuentaCorriente, true)">
+                  <mat-icon class="editar">edit</mat-icon>
+                </button>
+                <button mat-icon-button color="primary" matTooltip="Eliminar" (click)="eliminarCuentaCorriente(cuentaCorriente.id)">
+                  <mat-icon class="eliminar">delete</mat-icon>
+                </button>
               </mat-cell>
             </ng-container>
             <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
