--- a/src/app/modules/clientes/consultar-clientes/consultar-clientes.component.html
+++ b/src/app/modules/clientes/consultar-clientes/consultar-clientes.component.html
@@ -57,7 +57,7 @@
   </mat-card-header>
 
   <!-- loading -->
-  <div class="spinner-wrapper" *ngIf="clientes.length == 0">
+  <div class="spinner-wrapper" *ngIf="isLoading">
     <mat-spinner></mat-spinner>
   </div>
 
@@ -97,10 +97,6 @@
 
           </mat-table>
 
-          <h6 *ngIf="!this.clientes.length" class="alert alert-secondary text-center">
-            No se encuentran clientes para mostrar, realice una nueva búsqueda.
-          </h6>
-
           <mat-paginator *ngIf="this.clientes.length > 0"
                          [length]="this.clientes.length"
                          [pageSize]="10"
@@ -109,6 +105,10 @@
       </div>
     </mat-card-content>
   </mat-card>
+
+  <h5 *ngIf="!isLoading && !(this.clientes.length > 0)" class="alert alert-secondary text-center">
+    No se encuentran clientes para mostrar, realice una nueva búsqueda.
+  </h5>
 </div>
 
 
