--- a/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
+++ b/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
@@ -136,6 +136,10 @@
             <input type="text" matInput [formControl]="txCodigoPostal"/>
           </mat-form-field>
         </div>
+
+        <div class="spinner-wrapper" *ngIf="isLoading">
+          <mat-spinner></mat-spinner>
+        </div>
       </div>
     </div>
 
