--- a/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.html
+++ b/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.html
@@ -141,7 +141,7 @@
         <div class="row">
 
           <div class="col-md-12">
-            <mat-table [dataSource]="dataSourceProductos" matSort [class.disabled-table]="formDesactivado">
+            <mat-table [dataSource]="dataSourceProductos" matSort [class.disabled-table]="formDesactivado || tablaProductosDesactivada">
               <ng-container matColumnDef="imgProducto">
                 <mat-header-cell *matHeaderCellDef>IMAGEN</mat-header-cell>
                 <mat-cell *matCellDef="let producto">
