--- a/src/app/modules/pedidos/registrar-pedido/registrar-pedido.component.html
+++ b/src/app/modules/pedidos/registrar-pedido/registrar-pedido.component.html
@@ -97,7 +97,7 @@
         </mat-form-field>
       </div>
       <div class="col-md-8">
-        <button mat-stroked-button color="warn" class="btn round new-product-btn" (click)="registrarNuevoProducto()" [disabled]="formDesactivado">
+        <button mat-stroked-button color="warn" class="btn round new-product-btn" (click)="registrarNuevoProducto()" [disabled]="formDesactivado || listaProductosDeshabilitada">
           <mat-icon>add</mat-icon>Nuevo producto
         </button>
       </div>
@@ -110,7 +110,7 @@
         <div class="row">
 
           <div class="col-md-12">
-            <mat-table [dataSource]="dataSourceProductos" matSort [class.disabled-table]="formDesactivado">
+            <mat-table [dataSource]="dataSourceProductos" matSort [class.disabled-table]="formDesactivado || listaProductosDeshabilitada">
               <ng-container matColumnDef="imgProducto">
                 <mat-header-cell *matHeaderCellDef>IMAGEN</mat-header-cell>
                 <mat-cell *matCellDef="let producto">
