feat: detalles en remito
- Solo decir que el inventario se va a modificar en Remito (no en Factura)
- Arreglado que no mostraba la tabla de productos en la consulta

--- a/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.html
+++ b/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.html
@@ -116,10 +116,9 @@
       </div>
     </div>
 
-    <mat-divider class="my-3" *ngIf="ordenSeleccionada"></mat-divider>
-    <br *ngIf="ordenSeleccionada">
+    <mat-divider class="my-3" *ngIf="productos.length > 0 && !(data.esRegistro && !ordenSeleccionada)"></mat-divider>
 
-    <div class="row pt-4" *ngIf="productos.length > 0 && ordenSeleccionada">
+    <div class="row pt-4" *ngIf="productos.length > 0 && !(data.esRegistro && !ordenSeleccionada)">
       <div class="col-md-4">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Producto</mat-label>
@@ -131,7 +130,7 @@
 
     <br>
 
-    <mat-card *ngIf="productos.length > 0 && ordenSeleccionada">
+    <mat-card *ngIf="productos.length > 0 && !(data.esRegistro && !ordenSeleccionada)">
       <mat-card-content>
         <div class="row">
 
