feat: fin remito
- Se crea el componente BuscarProductosComponent para buscar productos y permitir su selección, para agregar nuevos productos al remito (luego de haber sido creado).
- Modificadas funciones de BD para contemplar productos que no tienen relación en el pedido inicial.
- No permitir que el usuario ponga otro estado que no sea "Pendiente" al crear un pedido.
- Agregado estado del pedido al seleccionar el pedido desde el remito.

--- a/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.html
+++ b/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.html
@@ -112,6 +112,12 @@
               <strong>Total:</strong> ${{ pedido.total }}
             </div>
           </div>
+
+          <div class="row align-items-center text-center mb-3 pedido-estado">
+            <div class="col">
+              <strong>Estado:</strong> {{ pedido.estadoPedido.nombre }}
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -125,6 +131,11 @@
           <input type="text" matInput [formControl]="txBuscar"/>
           <mat-icon matPrefix>search</mat-icon>
         </mat-form-field>
+      </div>
+      <div class="col-md-8">
+        <button mat-stroked-button color="warn" class="btn round new-product-btn" (click)="registrarNuevoProducto()" [disabled]="formDesactivado || tablaProductosDesactivada">
+          <mat-icon>add</mat-icon>Nuevo producto
+        </button>
       </div>
     </div>
 
