titulo registrar venta

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -3,6 +3,10 @@
     <!-- Lista de productos -->
     <div class="col-7">
       <mat-card class="p-4 product-list">
+        <p class="titulo">Registrar venta</p>
+        <br>
+        <mat-divider></mat-divider>
+        <br>
         <div class="row">
           <!-- Botón de la lupa -->
           <div class="col-1">
