componente consultar ventas

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -3,9 +3,9 @@
     <!-- Lista de productos -->
     <div class="col-7">
       <mat-card class="p-4 product-list">
-        <p class="titulo">Registrar venta</p>
-        <br>
+        <h2 class="invoice-title">Registrar venta</h2>
         <mat-divider></mat-divider>
+        <br>
         <br>
         <div class="row">
           <!-- Botón de la lupa -->
